--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/eslint": "1.7.1",
     "eslint": "^9.33.0",
+    "lodash-es": "^4.17.21",
     "nuxt": "^4.0.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
+    "@types/lodash-es": "^4.17.12",
     "eslint-plugin-format": "^1.0.1"
   }
 }
